# recipeAgent

./: .gitignore  Dockerfile.backend  app.py  docker-compose-dev.yml  main.py  pyproject.toml
frontend/: Dockerfile.dev  package.json
recipe_agent/: main.py
recipe_agent/agents/: description_validator.py  model_factory.py  video_agent.py
recipe_agent/api/: router.py
recipe_agent/api/v1/endpoints/: auth.py  integrations.py  recipes.py  users.py
recipe_agent/auth/: models.py  router.py  schemas.py  service.py
recipe_agent/core/: database.py  recipe_service.py  security.py
recipe_agent/db/: database.py
recipe_agent/db/models/: api_keys.py  users.py
recipe_agent/integrations/: mealie_integration.py
recipe_agent/models/input_models/: video.py
recipe_agent/models/output_models/: __init__.py  recipe.py  recipie.py  video.py
recipe_agent/tools/: video_loader.py
sandbox/: api_test.py  recipe_push.py
tests/integration/: test_api.py
tests/model_eval/: eval_dataset.py  extraction_evaluator.py
tests/unit/: test_mealie_integration.py  test_model_creation.py  test_video_utils.py
